force-app/main/default/objects/stripeGC__Setup_Data__c/fields/stripeGC__Event_Retention_Amount__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Event_Retention_Amount__c</fullName>
    <label>Event Retention Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>