force-app/main/default/objects/stripeGC__Setup_Data__c/fields/stripeGC__Is_Sync_Trigger_Active__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Is_Sync_Trigger_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sync Trigger Active</label>
    <type>Checkbox</type>
</CustomField>