force-app/main/default/objects/stripeGC__Setup_Data__c/fields/stripeGC__Steps_Completed__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Steps_Completed__c</fullName>
    <label>Steps Completed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>